17 September 2024: Wouter
	- Add redis-command-timeout: 20 and redis-connect-timeout: 200,
	  that can set the timeout separately for commands and the
	  connection set up to the redis server. If they are not
	  specified, the redis-timeout value is used.

16 September 2024: Wouter
	- Merge #1140: Fix spelling mistake in comments.

11 September 2024: Yorgos
	- Fix and add comments in testdata/val_negcache_ttl.rpl.

10 September 2024: Wouter
	- Fix to limit NSEC and NSEC3 TTL when aggressive nsec is
	  enabled (RFC9077).
	- Add unit test for ttl limit for aggressive nsec.

6 September 2024: Yorgos
	- Fix alloc-size and calloc-transposed-args compiler warnings.
	- Fix comment to not trigger doxygen unknown command.

5 September 2024: Wouter
	- Fix config file read for dnstap-sample-rate.

2 September 2024: Wouter
	- Merge #1135: Add new IANA trust anchor.

30 August 2024: Wouter
	- Merge #1132: b.root renumbering.
	- Fix for #1132, adjusted unit test for change in the test file.
	- Fix for #1132, comment about adjusted copy of reference check.

29 August 2024: Wouter
	- Unit test for auth zone transfer TLS, and TLS failure.
	- Fix to print port number in logs for auth zone transfer activities.

28 August 2024: Wouter
	- Fix that when rpz is applied the message does not get picked up by
	  the validator. That stops validation failures for the message.
	- Fix that stub-zone and forward-zone clauses do not exhaust memory
	  for long content.

27 August 2024: Wouter
	- Fix #1130: Loads of logs: "validation failure: key for validation
	  <domain>. is marked as invalid because of a previous" for
	  non-DNSSEC signed zone.

23 August 2024: Wouter
	- Merge patch to fix for glue that is outside of zone, with
	  `harden-unverified-glue`, from Karthik Umashankar (Microsoft).
	  Enabling this option protects the Unbound resolver against bad
	  glue, that is unverified out of zone glue, by resolving them.
	  It uses the records as last resort if there is no other working
	  glue.